--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@prisma/client": "^3.9.2",
+    "@sendgrid/mail": "^7.6.1",
     "@tailwindcss/forms": "^0.4.0",
     "next": "^12.0.9",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
-    "react-hook-form": "^7.27.1"
+    "react-hook-form": "^7.27.1",
+    "twilio": "^3.75.0"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
